Fix javadoc aggregation for kivakit-web-wicket