@@ -97,7 +97,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <detectJavaApiLink>false</detectJavaApiLink>
+                    <!-- add-reads is an experimental javadoc option -->
+                    <additionalOptions>
+                        --limit-modules kivakit.web.wicket
+                        --add-reads org.apiguardian.api=ALL-UNNAMED
+                    </additionalOptions>                        
                 </configuration>
             </plugin>            
             <plugin>
